--- a/courses.css
+++ b/courses.css
@@ -23,7 +23,10 @@ body{
     margin-left: 10%;
  
  }
- 
+ .course-details a{
+    text-decoration: none;
+    color:black;
+ }
 
 .navbar {
     
@@ -225,5 +228,210 @@ footer {
     }
     .footer{
         align-items: center;
+    }
+}
+/* 
+Courses--->Inside Page */
+.container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+
+} 
+ .courses-info-holder{
+    width: 63%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    
+ }
+ .course-image-details-holder{
+    width: 30%;
+    height: auto;
+     
+ }
+ .heading-holder{
+    padding-left: 20%;
+ }
+ .course-description{
+    padding-left: 20%;
+    font-weight: 100;
+    padding-top: 1%;
+    font-size: larger;
+  
+ }
+  
+ .course-content{
+    padding-left: 20%;
+    padding-top: 2%;
+    display: flex;
+    flex-direction: column;
+    padding-right: 2%;
+    padding-bottom: 2%;
+    
+ }
+ .chapter-box{
+    display: flex;
+    border: solid 0.2px black;
+    height: 10vh;
+ }
+ .chapter-box:hover{
+    background-color: #9399f1;
+ }
+ .chapter-head{
+    padding-left: 3%;
+    padding-top: 1%;
+ }
+ .chapter-count{
+    padding-top: 3px;
+    padding-left: 1%;
+ }
+ .lesson-count p{
+    font-size: 4px;
+ }
+ .chapter-head p{
+    font-size: medium;
+ }
+ .syllabus{
+    padding-bottom: 2%;
+ }
+ .dropdown-icon{
+    padding-left: 70%;
+    padding-top: 3%;
+ }
+ .course-right-infoside{
+   padding: 1% ;
+    margin-left: 1%;
+   border: 2px solid black;
+   display: flex;
+   flex-direction: column;
+ }
+ 
+ 
+ .video-holder video{
+   width: 100%;
+   height: 30vh;
+    
+ }
+ .time-limit{
+    display: flex;
+    gap: 3%;
+ }
+ .price
+ {
+    padding-top: 2%;
+ }
+ .buy-now-button{
+    padding-top: 3%;
+  
+ }
+ .buy-now-button button{
+    z-index: 1;
+    position: absolute;
+    width: 20vh;
+    height: 8vh;
+    background-color: #9399f1;
+    border: none;
+    border-radius: 5%;
+    font-weight: 900;
+ }
+
+ .test-button button:hover{
+
+    
+   background-color: #6e70df;
+ }
+ .test-button{
+
+    padding-top: 3%;
+
+  
+ }
+
+ .button-holder{
+    display: flex;
+    position: relative;
+ }
+ .test-button button{
+   
+    position: absolute;
+    width: 20vh;
+    height: 8vh;
+    background-color: #9399f1;
+    border: none;
+    border-radius: 5%;
+    font-weight: 900;
+ }
+
+ .buy-now-button button:hover{
+   background-color: #6e70df;
+ }
+ .course-lecture{
+    display: flex;
+    border: solid 0.2px black;
+    height: 10vh;
+    display: none;
+ }
+ .chapter-play{
+    padding-top: 3%;
+    padding-left: 1%;
+    
+ }
+ .lec-name{
+    padding-top: 3%;
+    padding-left: 3%;
+ }
+ .course-sneak{
+    padding-top:5%;
+ }
+ .course-lecture-count{
+    font-weight: 800;
+ }
+ @media only screen and (max-width: 950px) {
+    /* Adjust styles for screens up to 768px wide */
+
+    .container {
+        flex-direction: column;
+    }
+
+    .courses-info-holder {
+        width: 100%;
+    }
+
+    .course-image-details-holder {
+        width: 100%;
+    }
+
+    /* ... (Adjust other styles as needed) ... */
+}
+
+@media only screen and (max-width: 480px) {
+    /* Adjust styles for screens up to 480px wide */
+
+    .heading-holder,
+    .course-description,
+    .course-content,
+    .chapter-box,
+    .dropdown-icon,
+    .chapter-head,
+    .chapter-count,
+    .lesson-count p,
+    .syllabus,
+    .button-holder,
+    .test-button,
+    .buy-now-button,
+    .course-lecture,
+    .chapter-play,
+    .lec-name,
+    .course-sneak,
+    .course-lecture-count {
+        padding: 5px;
+        font-size: small; /* Adjusted font size for smaller screens */
+    }
+
+    .buy-now-button button,
+    .test-button button {
+        width: 100%;
+        font-size: small; /* Adjusted font size for smaller screens */
     }
 }
