--- a/lecture.css
+++ b/lecture.css
@@ -6,12 +6,13 @@
     font-family: 'Baloo 2', sans-serif;
     font-family: 'Hedvig Letters Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 
   
 
 }
 body{
-    background: linear-gradient(to right, #282537  ,#282537 );
+    background: linear-gradient(to right, #f7f5f8 ,#e1eef6);
     font-family: 'Baloo 2', sans-serif;
     font-family: 'Hedvig Letters Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
@@ -25,7 +26,7 @@ body{
  }
  .course-details a{
     text-decoration: none;
-    color:white;
+    color:black;
  }
 
 .navbar {
@@ -86,7 +87,9 @@ body{
     border-radius: 10px;
 }
 
- 
+ .image-course{
+    margin-left: 1.5%;
+ }
 
 @media only screen and (max-width: 1200px) {
     .navbar {
@@ -126,106 +129,112 @@ body{
         display: block;
     }
 }
-.welcome-text-holder{
+.video-container{
+    display: flex;
     width: 100%;
-    height: 15vh;
-   background-color:linear-gradient(to right #6e70df #9399f1 );
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: -20px;
+    height:100%;
+    padding-left: 2%;
+
 }
-.welcome-text{
+ 
+.chapter-toggle{
+    width: 35%;
+    height: 100%;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    color: azure;
-    margin-left: 10%;
+    flex-direction: column;
+    padding-left: 5%;
     
 }
-.courses-section {
-    margin: 20px 0;
-    margin-left: 10%;
+.chapter-box{
+    display: flex;
+    border: solid 0.2px black;
+    height: 10vh;
     width: 80%;
-    overflow: auto;
-    max-height: 300px;
-    color: beige;
-}
 
-.course-row {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
- 
-    border: grey .5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-.course-row:hover{
-    background-color: #b5b6ca25;
-}
-
-.course-thumbnail {
-    width: 150px; 
-    height: auto;
-    margin-right: 20px;
-    
-}
- 
-.course-details {
-    flex: 1;
-}
-
-.course-details h2 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-}
-
-.price {
-    font-weight: bold;
-    color: #e4e4ea; 
-}
-footer {
-    
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-   color: white;
-    padding: 20px;
-    text-align: left;
-     z-index: 1000; 
-     margin-left: 25px;
-}
- 
-
-.social-icons {
-    display: flex;
-    justify-content: flex-start;
+ }
+ .chapter-box:hover{
+    background-color: #9399f1;
+ }
+ .chapter-head{
+    padding-left: 3%;
+    padding-top: 1%;
+ }
+ .chapter-count{
+    padding-top: 3px;
+    padding-left: 1%;
+ }
+ .lesson-count p{
+    font-size: 4px;
+ }
+ .chapter-head p{
+    font-size: medium;
+ }
+ .syllabus{
+    padding-bottom: 2%;
+ }
+ .dropdown-icon{
+    padding-left: 40%;
+    padding-top: 3%;
+ }
   
-}
 
-.social-icon {
-    margin: 0 10px;
-    color: #9399f1;
-}
-
-.social-icon i {
-    font-size: 30px; 
+.video-holder {
+    width: 65%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow-y: hidden;
+ 
  
 }
-
-
-.social-icon:hover {
-    transform: scale(1.5) ; 
-    transition: transform 0.3s ease-in-out;
-    color: #6e70df;
+.video-player{
+    width: 100%;
+    
 }
-@media only screen and (max-width: 600px) {
-    .social-icon {
-        margin: 5px;
-        justify-content: center;
+
+
+.video-player video {
+    width: 100%; 
+}
+.lecture-name{
+    display: flex;
+    justify-content: space-between;
+}
+.course-lecture{
+    display: flex;
+    border: solid 0.2px black;
+    height: 10vh;
+    width: 80%;
+    display: none; 
+ }
+ .chapter-play{
+    padding-top: 3%;
+    padding-left: 1%;
+    
+ }
+ .lec-name{
+    padding-top: 3%;
+    padding-left: 3%;
+ }
+ @media only screen and (max-width: 1200px) {
+     
+    .video-container {
+    
+        flex-direction: column;
     }
-    .footer{
-        align-items: center;
+    
+    .lecture-heading{
+        font-size:0.5rem;
+    }
+     .lecture-name{
+        flex-direction: column;
+     }
+    .chapter-toggle {
+        width: 100%;
+        padding: 1%;
+    }
+
+    .dropdown-icon {
+        padding-left: 20%;
     }
 }
